# teste-previsao3

./: .dockerignore  .gitignore  Dockerfile  README.md  comandos.txt  docker-compose.yml  expli.txt  pyproject.toml  resultado.txt
historico/: PETR4 Dados Históricos.csv
reports/active/: ALBROOKS_BTCUSDT_15m.json  ALBROOKS_BTCUSDT_1h.json  BTCUSDT_5m.json  DONCH_BTCUSDT_15m.json  STOCH_BTCUSDT_15m.json  STOCH_BTCUSDT_1h.json  STOCH_BTCUSDT_5m.json
reports/agents/candle_pattern7_rl/: BTCUSDT_15m.npz  metrics_BTCUSDT_15m_20251003_135706.jsonl  metrics_BTCUSDT_15m_20251003_140303.jsonl  metrics_BTCUSDT_15m_20251003_141433.jsonl  metrics_BTCUSDT_15m_20251003_142414.jsonl  metrics_BTCUSDT_15m_20251003_143918.jsonl  metrics_BTCUSDT_15m_20251003_143954.jsonl  metrics_BTCUSDT_15m_20251003_150604.jsonl  metrics_BTCUSDT_15m_20251003_150716.jsonl
reports/agents/ma_crossover_rl/: BTCUSDT_15m.npz  metrics_BTCUSDT_15m_20251003_153145.jsonl  metrics_BTCUSDT_15m_20251003_153312.jsonl  metrics_BTCUSDT_15m_20251003_154354.jsonl  metrics_BTCUSDT_15m_20251003_155132.jsonl  metrics_ppo_BTCUSDT_15m_20251003_161800.jsonl  (+2 more)
reports/ma_crossover_optuna/: study_BTCUSDT_15m_20251003_164405.json  study_BTCUSDT_15m_20251003_165736.json  study_BTCUSDT_15m_20251006_075644.json
scripts/: populate_cache.py
src/: binance_client.py
src/cache/: klines_cache.py
src/strategies/: __init__.py
src/utils/: __init__.py  data_loader.py  metrics.py
ta-lib/: Makefile  config.status  libtool
ta-lib/src/: Makefile
trascricao-estrategias/: dicas.txt  esto-detec.txt  insidebar.txt  trasnc.txt
(+100 files in other folders)
